<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/general"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/general"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/account"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/noti"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pref"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/pref"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/action_sign_out"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:onClick="onClick"
            android:clickable="true"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>